cmake_minimum_required(VERSION 3.10)
project(pfld)
set(OpenCV_DIR /usr/local/lib/cmake/opencv4/)
find_package(OpenCV QUIET COMPONENTS core highgui imgproc imgcodecs)
if(NOT OpenCV_FOUND)
    find_package(OpenCV QUIET COMPONENTS core highgui imgproc)
endif()

if(OpenCV_FOUND)
    if(${OpenCV_VERSION_MAJOR} GREATER_EQUAL 4)
        set(CMAKE_CXX_STANDARD 11)
    endif()
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../src)
    include_directories(${CMAKE_CURRENT_BINARY_DIR}/../src)
    add_executable(pfld ../examples/pfld.cpp)
    target_link_libraries(pfld PRIVATE ncnn ${OpenCV_LIBS})
else()
    message(WARNING "OpenCV not found, examples won't be built")
endif()